# embed-model-api

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
.devcontainer/: devcontainer.json  post_install.sh
app/: config.py  embeddings.py  embeddings_abc.py  main.py  schemas.py
scripts/: build-docker.sh  download_model.py  run_tests.sh
tests/: conftest.py  test_embed_unit.py  test_integration.py
